Thu Mar 24 10:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Log/RTEventLogNotification.cpp:
          When TAO_LACKS_EVENT_CHANNEL_ANY is defined, don't fill the
          any_value, it is not there. Thanks for Charles Frasch
          <cfrasch at atdesk dot com> for reporting this. This fixes
          bugzilla [1795]

Thu Mar 24 09:23:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/EC_Reactive_ConsumerControl.h:
        * orbsvcs/orbsvcs/Event/EC_Reactive_SupplierControl.h:
        * orbsvcs/orbsvcs/Event/Event_Channel.{h,cpp}:
        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_SupplierControl.{h,cpp}:
        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_ConsumerControl.{h,cpp}:
          Changed the type of the timer_id_ member from int to long, the timer_id
          returned from the reactor is of type long

        * orbsvcs/orbsvcs/Event/ECG_Reactive_ConsumerEC_Control.{h,cpp}:
        * orbsvcs/orbsvcs/Event/ECG_Reconnect_ConsumerEC_Control.cpp.{h,cpp}:
          Use cancel_timer instead of remove_handler to cancel a timer scheduled
          in the reactor. Fixes bugzilla bug [1693]

        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_Pulling_Strategy.{h,cpp}:
          Initialise the timer_id with -1 in the constructor and define it as a
          long

Thu Mar 24 07:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Event/Mcast/Simple/consumer.cpp:
          Fixed emulated exception problem

Wed Mar 23 16:51:00 2005  Gary Maxey <gary.maxey@hp.com>

        * tao/Any_Basic_Impl.h

          Use "long long" as a container for "unsigned long long" in the
          "has long long but no unsigned long long" case.

        * tao/Any_Basic_Impl.cpp

          Use "long long" as a container for "unsigned long long" in the
          "has long long but no unsigned long long" case.

Wed Mar 23 14:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
