@@ -1,3 +1,9 @@
+Thu Mar 24 12:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_interface/any_op_cs.cpp:
+        * TAO_IDL/be/be_visitor_exception/any_op_cs.cpp:
+          Generate template<> instead of ACE_TEMPLATE_SPECIALIZATION
+
 Thu Mar 24 10:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * orbsvcs/orbsvcs/Log/RTEventLogNotification.cpp:
